apps/websocket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-app
spec:
  selector:
    app: websocket-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
